# WebKit

./: .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  Dockerfile.musl  MODULE.bazel  ReadMe.md  WORKSPACE  install-deps.ps1  mac-release.bash  musl-release.sh  release.sh  windows-release.ps1
.github/workflows/: build.yml  windows.yml
LayoutTests/accessibility/: aria-checked-mixed-value-expected.txt  color-well-expected.txt
LayoutTests/inspector/console/: message-stack-trace-expected.txt
LayoutTests/interaction-region/: event-region-overflow-expected.txt
Source/JavaScriptCore/: CMakeLists.txt  PlatformJSCOnly.cmake  Sources.txt  create_hash_table  jsc.cpp
Source/JavaScriptCore/API/: APICallbackFunction.h  APICast.h  JSAPIGlobalObject.mm  JSBase.cpp  JSCallbackObjectFunctions.h  JSContext.mm  JSContextRef.cpp  JSHeapFinalizerPrivate.cpp  JSMarkingConstraintPrivate.cpp  JSObjectRef.cpp  JSScript.mm  JSScriptRef.cpp  JSStringRef.cpp  JSStringRef.h  JSTypedArray.cpp  JSValue.mm  JSValueRef.cpp  JSValueRef.h  JSVirtualMachine.mm  JSWeakObjectMapRefPrivate.cpp  JSWeakPrivate.cpp  JSWrapperMap.mm  JavaScript.h  MarkedJSValueRefArray.cpp  ObjCCallbackFunction.mm  OpaqueJSString.cpp  OpaqueJSString.h
Source/JavaScriptCore/Scripts/: generate-combined-inspector-json.py
Source/JavaScriptCore/assembler/: ARM64Assembler.h  ARMv7Assembler.h  AssemblerBuffer.h  AssemblerCommon.h  AssemblyComments.h  FastJITPermissions.h  JITOperationList.cpp  JITOperationList.h  LinkBuffer.cpp  LinkBuffer.h  MacroAssembler.h  MacroAssemblerARM64.cpp  MacroAssemblerARM64.h  MacroAssemblerPrinter.cpp  MacroAssemblerX86_64.h  PerfLog.cpp  ProbeContext.h  SecureARM64EHashPins.cpp  SecureARM64EHashPins.h  X86Assembler.h  testmasm.cpp
Source/JavaScriptCore/b3/: B3Const32Value.cpp  B3Const64Value.cpp  B3ConstDoubleValue.cpp  B3ConstFloatValue.cpp  B3ConstPtrValue.h  B3LowerMacrosAfterOptimizations.cpp  B3LowerToAir.cpp  B3LowerToAir32_64.cpp  B3MathExtras.cpp  B3MoveConstants.cpp  B3Procedure.cpp  B3Procedure.h  B3ReduceStrength.cpp  B3Type.h  B3TypeMap.h  B3Value.cpp  B3Value.h  B3ValueRep.h  testb3.h  testb3_1.cpp  testb3_2.cpp  testb3_3.cpp  testb3_4.cpp  testb3_5.cpp  testb3_6.cpp  testb3_7.cpp  testb3_8.cpp
Source/JavaScriptCore/builtins/: BuiltinExecutableCreator.cpp  BuiltinExecutableCreator.h  BuiltinExecutables.cpp  BuiltinExecutables.h  BuiltinNames.h  BuiltinUtils.h  GlobalOperations.js  ModuleLoader.js  PromiseOperations.js  TypedArrayConstructor.js
Source/JavaScriptCore/bytecode/: AdaptiveInferredPropertyValueWatchpointBase.cpp  BytecodeDumper.cpp  BytecodeIntrinsicRegistry.h  BytecodeList.rb  BytecodeUseDef.cpp  CallLinkInfo.cpp  CallVariant.h  CodeBlock.cpp  CodeBlock.h  CodeBlockHash.cpp  CodeOrigin.h  ExpressionInfo.h  Fits.h  GetByValHistory.h  InlineAccess.cpp  InlineCacheCompiler.cpp  InlineCacheCompiler.h  Instruction.h  InstructionStream.h  LinkTimeConstant.h  MetadataTable.h  Operands.h  SharedJITStubSet.h  SpeculatedType.h  UnlinkedMetadataTable.cpp  UnlinkedMetadataTable.h  ValueProfile.h  Watchpoint.cpp  Watchpoint.h
Source/JavaScriptCore/bytecompiler/: BytecodeGenerator.cpp  BytecodeGenerator.h  NodesCodegen.cpp
Source/JavaScriptCore/debugger/: Debugger.h
Source/JavaScriptCore/dfg/: DFGAbstractHeap.h  DFGAbstractInterpreterInlines.h  DFGAvailability.h  DFGByteCodeParser.cpp  DFGClobberize.h  DFGClobbersExitState.cpp  DFGDisassembler.cpp  DFGDoesGC.cpp  DFGEdge.h  DFGFixupPhase.cpp  DFGFlowMap.h  DFGHeapLocation.h  DFGJITCode.cpp  DFGJITCompiler.cpp  DFGLazyJSValue.cpp  DFGMayExit.cpp  DFGMinifiedNode.cpp  DFGMinifiedNode.h  DFGNode.h  DFGNodeFlowProjection.h  DFGNodeType.h  DFGNullAbstractState.h  DFGOSREntry.cpp  DFGOSRExit.cpp  DFGObjectAllocationSinkingPhase.cpp  DFGOpInfo.h  DFGOperations.cpp  DFGOperations.h  DFGPredictionPropagationPhase.cpp  DFGPropertyTypeKey.h  DFGPureValue.h  DFGRegisteredStructureSet.cpp  DFGSafeToExecute.h  DFGSpeculativeJIT.cpp  DFGSpeculativeJIT.h  DFGSpeculativeJIT32_64.cpp  DFGSpeculativeJIT64.cpp  DFGStoreBarrierInsertionPhase.cpp  DFGThunks.cpp  DFGValidate.cpp
Source/JavaScriptCore/disassembler/: ARM64Disassembler.cpp  RISCV64Disassembler.cpp  X86Disassembler.cpp
Source/JavaScriptCore/domjit/: DOMJITEffect.h
Source/JavaScriptCore/ftl/: FTLAbstractHeap.h  FTLCapabilities.cpp  FTLLowerDFGToB3.cpp  FTLOSRExitCompiler.cpp  FTLOperations.cpp  FTLOutput.cpp  FTLOutput.h  FTLState.cpp
Source/JavaScriptCore/generator/: Argument.rb  Opcode.rb
Source/JavaScriptCore/heap/: AbstractSlotVisitorInlines.h  CellContainer.h  ConservativeRoots.cpp  FreeList.cpp  FreeList.h  FreeListInlines.h  GCIncomingRefCounted.h  GCIncomingRefCountedInlines.h  GCMemoryOperations.h  GCSegmentedArray.h  HandleSet.h  Heap.cpp  Heap.h  HeapCell.h  HeapInlines.h  HeapSnapshot.cpp  HeapUtil.h  JITStubRoutineSet.cpp  MachineStackMarker.cpp  MarkedBlock.cpp  MarkedBlock.h  MarkedBlockInlines.h  MarkedSpaceInlines.h  MarkingConstraint.h  PreciseAllocation.cpp  PreciseAllocation.h  SlotVisitor.cpp  VerifierSlotVisitor.cpp  VerifierSlotVisitorInlines.h  WeakHandleOwner.cpp  WeakHandleOwner.h  WeakImpl.h
Source/JavaScriptCore/inspector/: JSGlobalObjectDebugger.cpp  JSGlobalObjectDebugger.h  JSGlobalObjectInspectorController.cpp  JSGlobalObjectInspectorController.h  ScriptCallStackFactory.cpp  ScriptCallStackFactory.h
Source/JavaScriptCore/interpreter/: CallFrame.cpp  CallFrame.h  CalleeBits.h  FrameTracers.h  Interpreter.cpp  Interpreter.h  InterpreterInlines.h  Register.h  ShadowChicken.h  StackVisitor.cpp
Source/JavaScriptCore/jit/: AssemblyHelpers.cpp  AssemblyHelpers.h  BinarySwitch.cpp  ExecutableAllocator.cpp  ExecutableAllocator.h  JIT.cpp  JITCode.h  (+14 more)
Source/bmalloc/: CMakeLists.txt  PlatformJSCOnly.cmake
Source/cmake/: OptionsCommon.cmake  OptionsJSCOnly.cmake  WebKitCommon.cmake  WebKitCompilerFlags.cmake  WebKitFindPackage.cmake
Tools/ReducedFTL/: ComplexTest.cpp
Tools/Scripts/: build-jsc
bazel/: install_clang.bzl  install_clang_on_macos.bzl  install_clang_on_ubuntu.bzl
bazel/toolchains/: BUILD.bazel  clang_darwin.bzl  clang_linux.bzl
(+451 files in other folders)
